--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyBUdnRFDvnIE2TKUMH9xIU1ti40mG4jJl0&origin=-23.675560,-46.763396&destination=-23.6436532,-46.6642222&mode=transit&zoom=12">
             </iframe>
 
-            <iframe style="border:0; width: 100%; height: 450PX;" allowfullscreen
+            <iframe style="border:0; width: 100%; height: 450PX;" loading="lazy" allowfullscreen
                 referrerpolicy="no-referrer-when-downgrade"
                 src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBUdnRFDvnIE2TKUMH9xIU1ti40mG4jJl0&q=-23.6436532,-46.6642222&zoom=12">
             </iframe>
